fixed some spacing issues

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -123,9 +123,9 @@ a:active.active{color: #6343A6;}
 }
 
 .about_img {
-	width: 50%;
+	width: 40%;
 	padding-top: 15px;
-	padding-left: 25%;
+	padding-left: 30%;
 }
 
 .about_italic{
